examples/panic/panic.out
# To run this sample, navigate to the directory that contains the
# `.bal` file, and execute the `ballerina run` command.
$ ballerina run panic.bal
Record ID: 1, value: record1
2019-09-04 11:50:24,595 ERROR [inalang.jvm.scheduling.Scheduler] - Strand died
error: Record is nil
        at panic:readRecord(panic.bal:13)
           panic:main(panic.bal:27)
